syntax = "proto3";

option csharp_namespace = "SeismoSrv";

package seismo;

service SeismoService {
    rpc SeismoPing (SeismoPingRequest) returns (SeismoPingReply) {}
}

// SeismoPing messages
message SeismoPingRequest {
    string name = 1;
}

message SeismoPingReply {
    string message = 1;
}
